--- a/assets/quickbar/style.css
+++ b/assets/quickbar/style.css
@@ -42,6 +42,7 @@
     -ms-box-sizing: border-box;
     box-sizing: border-box; }
     .quickbar ul li {
+	  white-space:nowrap;
       display: inline-block;
       background-color: #5D8A36;
       background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #70a641), color-stop(100%, #4b6f2b));
