--- a/assets/components/quickbar/modx.css
+++ b/assets/components/quickbar/modx.css
@@ -20,7 +20,7 @@
   width: 100%;
   height: 40px;
   position: fixed;
-  top: -40px;
+  top: -36px;
   left: 0;
   z-index: 10000;
   text-align: left; }
@@ -41,7 +41,7 @@
 #quickbar-wrapper .quickbar ul li {
   white-space: nowrap;
   display: inline-block;
-  padding: 2px 8px 1px 8px;
+  padding: 4px 8px 1px 8px;
   height: 24px;
   margin-right: 4px; }
 
@@ -58,10 +58,10 @@
 /* start style */
 /* properties */
 #quickbar-wrapper .quickbar {
-  border-bottom: 4px solid #9ac54f;
-  background: #131313;
-  background: rgba(19, 19, 19, 0.96);
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
+  border-bottom: 0 solid #4d9c41;
+  background: #141414;
+  background: rgba(20, 20, 20, 0.96);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
   -webkit-transition: all 160ms ease-in;
   -moz-transition: all 160ms ease-in;
   -o-transition: all 160ms ease-in;
@@ -73,15 +73,15 @@
     transition: all 240ms ease-in; }
 
 #quickbar-wrapper .quickbar ul {
-  color: white; }
+  color: #00add8; }
   #quickbar-wrapper .quickbar ul li {
-    text-shadow: #263816 0 1px 0;
-    border-top: 1px solid #8abf5b;
-    border-bottom: 1px solid black;
+    text-shadow: none;
+    border-top: 1px solid #87c5e1;
+    border-bottom: 1px solid #005b72;
     font-size: 13px;
     border-radius: 4px;
     opacity: 0.99;
-    font-weight: bold;
+    font-weight: normal;
     background-color: #5D8A36;
     cursor: pointer;
     -webkit-box-sizing: border-box !important;
@@ -98,19 +98,26 @@
         color: inherit;
         text-decoration: none; }
 
+#quickbar-wrapper {
+  /*text-transform: lowercase;*/ }
+  #quickbar-wrapper .quickbar {
+    background-image: -webkit-linear-gradient(45deg, #87c5e1 40%, #00add8 50%, #4d9c41 66%, #fc8843 82%, #ec341f 100%);
+    background-image: -moz-linear-gradient(45deg, #87c5e1 40%, #00add8 50%, #4d9c41 66%, #fc8843 82%, #ec341f 100%);
+    background-image: -ms-linear-gradient(45deg, #87c5e1 40%, #00add8 50%, #4d9c41 66%, #fc8843 82%, #ec341f 100%);
+    background-image: -o-linear-gradient(45deg, #87c5e1 40%, #00add8 50%, #4d9c41 66%, #fc8843 82%, #ec341f 100%);
+    background-image: linear-gradient(45deg, #87c5e1 40%, #00add8 50%, #4d9c41 66%, #fc8843 82%, #ec341f 100%); }
+
 /* add a gradient and a rollover effect */
 #quickbar-wrapper .quickbar ul li {
   -webkit-transition: all 240ms ease-out;
   -moz-transition: all 240ms ease-out;
   -o-transition: all 240ms ease-out;
   transition: all 240ms ease-out;
-  background-image: -webkit-linear-gradient(180deg, #70a641 42%, #4b6f2b 100%);
-  background-image: -moz-linear-gradient(180deg, #70a641 42%, #4b6f2b 100%);
-  background-image: -ms-linear-gradient(180deg, #70a641 42%, #4b6f2b 100%);
-  background-image: -o-linear-gradient(180deg, #70a641 42%, #4b6f2b 100%);
-  background-image: linear-gradient(180deg, #70a641 42%, #4b6f2b 100%); }
+  background: #fafafa;
+  background: rgba(250, 250, 250, 0.76);
+  opacity: 0.86; }
   #quickbar-wrapper .quickbar ul li:hover {
-    color: white;
-    opacity: 0.86; }
+    color: #fc8843;
+    opacity: 0.99; }
 
 /* end style */
