--- a/assets/components/quickbar/sublime.css
+++ b/assets/components/quickbar/sublime.css
@@ -78,7 +78,7 @@
     text-shadow: none;
     border-top: 1px solid #787878;
     border-bottom: 1px solid black;
-    font-size: 13px;
+    font-size: 12px;
     border-radius: 4px;
     opacity: 0.99;
     font-weight: normal;
@@ -92,7 +92,7 @@
     #quickbar-wrapper .quickbar ul li a {
       color: inherit;
       text-decoration: none;
-      font-family: Helvetica, Arial, sans-serif;
+      font-family: "Lucida Console", Monaco, monospace;
       letter-spacing: 0; }
       #quickbar-wrapper .quickbar ul li a:visited {
         color: inherit;
