--- a/assets/components/quickbar/style.css
+++ b/assets/components/quickbar/style.css
@@ -1,102 +1,1 @@
-#quickbar-wrapper * {
-	-webkit-box-sizing: border-box; 
-	-moz-box-sizing: border-box;    
-	box-sizing: border-box;         
-}
-
-#quickbar-wrapper {
-  height: 4px !important;
-  overflow: visible !important; }
-
-#quickbar-wrapper .quickbar {
-  width: 100% !important;
-  height: 40px !important;
-  border-bottom: 4px solid #9ac54f !important;
-  background: #131313 !important;
-  background: rgba(19, 19, 19, 0.96) !important;
-  position: fixed !important;
-  top: -36px !important;
-  left: 0 !important;
-  z-index: 10000 !important;
-  text-align: left !important;
-  -webkit-transition: all 160ms ease-in;
-  -moz-transition: all 160ms ease-in;
-  -o-transition: all 160ms ease-in;
-  transition: all 160ms ease-in;
-  -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
-  -ms-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
-  -o-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.5); }
-  #quickbar-wrapper .quickbar:hover {
-    top: 0 !important;
-    -webkit-transition: all 240ms ease-in;
-    -moz-transition: all 240ms ease-in;
-    -o-transition: all 240ms ease-in;
-    transition: all 240ms ease-in; }
-  #quickbar-wrapper .quickbar ul {
-    margin: 0 !important;
-    color: white !important;
-    position: absolute !important;
-    top: 7px !important;
-    left: 0px !important;
-    padding: 0 4px !important;
-    width: 100% !important;
-    -webkit-box-sizing: border-box !important;
-    -moz-box-sizing: border-box !important;
-    -o-box-sizing: border-box !important;
-    -ms-box-sizing: border-box !important;
-    box-sizing: border-box !important; }
-    #quickbar-wrapper .quickbar ul li {
-	  white-space:nowrap !important;
-      display: inline-block !important;
-      background-color: #5D8A36 !important;
-      background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #70a641), color-stop(100%, #4b6f2b));
-      background-image: -webkit-linear-gradient(#70a641, #4b6f2b);
-      background-image: -moz-linear-gradient(#70a641, #4b6f2b);
-      background-image: -o-linear-gradient(#70a641, #4b6f2b);
-      background-image: linear-gradient(#70a641, #4b6f2b);
-      text-shadow: #263816 0 1px 0 !important;
-      border-top: 1px solid #8ABF5B !important;
-      border-bottom: 1px solid black !important;
-      font-size: 13px !important;
-      font-weight: bold !important;
-      -webkit-border-radius: 4px;
-      -moz-border-radius: 4px;
-      -o-border-radius: 4px;
-      -ms-border-radius: 4px;
-      border-radius: 4px;
-      -webkit-box-sizing: border-box;
-      -moz-box-sizing: border-box;
-      -o-box-sizing: border-box;
-      -ms-box-sizing: border-box;
-      box-sizing: border-box;
-      padding: 2px 8px 1px 8px !important;
-      height: 24px !important;
-      margin-right: 4px !important;
-      -webkit-transition: all 240ms ease-out;
-      -moz-transition: all 240ms ease-out;
-      -o-transition: all 240ms ease-out;
-      transition: all 240ms ease-out;
-      opacity: 0.99 !important;
-      /* oh, webkit */
-      cursor: pointer !important;
-      color: #ecf8e1 !important; }
-      #quickbar-wrapper .quickbar ul li:hover {
-        color: white !important;
-        opacity: 0.86 !important; }
-      #quickbar-wrapper .quickbar ul li.help {
-        float: right !important; }
-      #quickbar-wrapper .quickbar ul li a, #quickbar-wrapper .quickbar ul li a:visited {
-        color: inherit !important;
-        text-decoration: none !important; }
-      #quickbar-wrapper .quickbar ul li a {
-        font-family: Helvetica, Arial, sans-serif !important;
-        letter-spacing: 0 !important; }
-
-.touch #quickbar-wrapper .quickbar {
-  top: 0 !important; }
-
-@media only screen and (max-width: 480px) {
-  .quickbar {
-    top: 0 !important; } }
+#quickbar-wrapper *{-webkit-box-sizing:border-box ;-moz-box-sizing:border-box ;-o-box-sizing:border-box ;-ms-box-sizing:border-box ;box-sizing:border-box }#quickbar-wrapper{height:4px;overflow:visible}#quickbar-wrapper .quickbar{width:100%;height:40px;position:fixed;top:-40px;left:0;z-index:10000;text-align:left}#quickbar-wrapper .quickbar:hover{top:0}#quickbar-wrapper .quickbar ul{margin:0;padding:9px;width:100%;-webkit-box-sizing:border-box !important;-moz-box-sizing:border-box !important;-o-box-sizing:border-box !important;-ms-box-sizing:border-box !important;box-sizing:border-box !important}#quickbar-wrapper .quickbar ul li{white-space:nowrap;display:inline-block;padding:2px 8px 1px 8px;height:24px;margin-right:4px}#quickbar-wrapper .quickbar ul li.help{float:right}.touch #quickbar-wrapper .quickbar{top:0}@media only screen and (max-width: 480px){.quickbar{top:0}}#quickbar-wrapper .quickbar{border-bottom:4px solid #9ac54f;background:#131313;background:rgba(19,19,19,0.96);box-shadow:0 2px 2px rgba(0,0,0,0.5);-webkit-transition:all 160ms ease-in;-moz-transition:all 160ms ease-in;-o-transition:all 160ms ease-in;transition:all 160ms ease-in}#quickbar-wrapper .quickbar:hover{-webkit-transition:all 240ms ease-in;-moz-transition:all 240ms ease-in;-o-transition:all 240ms ease-in;transition:all 240ms ease-in}#quickbar-wrapper .quickbar ul{color:#fff}#quickbar-wrapper .quickbar ul li{text-shadow:none;border-top:1px solid #8abf5b;border-bottom:1px solid #000;font-size:12px;border-radius:4px;opacity:0.99;font-weight:normal;background-color:#5D8A36;cursor:pointer;-webkit-box-sizing:border-box !important;-moz-box-sizing:border-box !important;-o-box-sizing:border-box !important;-ms-box-sizing:border-box !important;box-sizing:border-box !important}#quickbar-wrapper .quickbar ul li a{color:inherit;text-decoration:none;letter-spacing:0}#quickbar-wrapper .quickbar ul li a:visited{color:inherit;text-decoration:none}#quickbar-wrapper{font-family:"Lucida Console", Monaco, monospace}#quickbar-wrapper .quickbar ul li{-webkit-transition:all 240ms ease-out;-moz-transition:all 240ms ease-out;-o-transition:all 240ms ease-out;transition:all 240ms ease-out;background-image:-webkit-linear-gradient(180deg, #70a641 42%, #4b6f2b 100%);background-image:-moz-linear-gradient(180deg, #70a641 42%, #4b6f2b 100%);background-image:-ms-linear-gradient(180deg, #70a641 42%, #4b6f2b 100%);background-image:-o-linear-gradient(180deg, #70a641 42%, #4b6f2b 100%);background-image:linear-gradient(180deg, #70a641 42%, #4b6f2b 100%)}#quickbar-wrapper .quickbar ul li:hover{color:#fff;opacity:0.86}
