--- a/assets/components/quickbar/css/additive.css
+++ b/assets/components/quickbar/css/additive.css
@@ -59,7 +59,7 @@
 /* start style */
 /* properties */
 #quickbar-wrapper .quickbar {
-  border-bottom: 4px solid #464646;
+  border-bottom: 4px solid #98d523;
   background: #1e1e1e;
   background: rgba(30, 30, 30, 0.96);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
@@ -74,10 +74,10 @@
     transition: all 240ms ease-in; }
 
 #quickbar-wrapper .quickbar ul {
-  color: #5ac4e8; }
+  color: #d33232; }
   #quickbar-wrapper .quickbar ul li {
     text-shadow: none;
-    border-top: 1px solid #5a5a5a;
+    border-top: 1px solid #646464;
     border-bottom: 1px solid black;
     font-size: 12px;
     border-radius: 4px;
@@ -110,10 +110,10 @@
   -moz-transition: all 240ms ease-out;
   -o-transition: all 240ms ease-out;
   transition: all 240ms ease-out;
-  background: #484848;
+  background: #4cc9d8 42%;
   /*@include gradient( background-image, linear-gradient(180deg, $buttonGradientFrom, $buttonGradientTo ) );*/ }
   #quickbar-wrapper .quickbar ul li:hover {
-    /*color: $white;*/
+    color: white;
     opacity: 0.86; }
 
 /* end style */
