--- a/assets/components/quickbar/css/greatsociety.css
+++ b/assets/components/quickbar/css/greatsociety.css
@@ -58,9 +58,9 @@
 /* start style */
 /* properties */
 #quickbar-wrapper .quickbar {
-  border-bottom: 4px solid #97bae1;
-  background: #e6eff8;
-  background: #d6e4f3;
+  border-bottom: 4px solid #e63520;
+  background: #2e8196;
+  background: #2e8196;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
   -webkit-transition: all 160ms ease-in;
   -moz-transition: all 160ms ease-in;
@@ -73,11 +73,11 @@
     transition: all 240ms ease-in; }
 
 #quickbar-wrapper .quickbar ul {
-  color: #cd6447; }
+  color: #a09547; }
   #quickbar-wrapper .quickbar ul li {
     text-shadow: none;
-    border-top: 1px solid white;
-    border-bottom: 1px solid #f9e612;
+    border-top: 1px solid #fef2cb;
+    border-bottom: 1px solid #947303;
     font-size: 12px;
     border-radius: 4px;
     opacity: 0.99;
@@ -109,10 +109,11 @@
   -moz-transition: all 240ms ease-out;
   -o-transition: all 240ms ease-out;
   transition: all 240ms ease-out;
-  background: #FEFBD9;
+  background: #F8C005;
+  color: #947303;
   /*@include gradient( background-image, linear-gradient(180deg, $buttonGradientFrom, $buttonGradientTo ) );*/ }
   #quickbar-wrapper .quickbar ul li:hover {
-    color: #cd6447;
-    opacity: 0.86; }
+    opacity: 0.8;
+    /*opacity: 0.86;*/ }
 
 /* end style */
