--- a/assets/components/quickbar/css/modx.css
+++ b/assets/components/quickbar/css/modx.css
@@ -23,8 +23,7 @@
   top: -32px;
   left: 0;
   z-index: 10000;
-  text-align: left;
-  top: 0; }
+  text-align: left; }
 
 #quickbar-wrapper .quickbar:hover {
   top: 0; }
