--- a/assets/components/quickbar/css/sherbert.css
+++ b/assets/components/quickbar/css/sherbert.css
@@ -58,9 +58,9 @@
 /* start style */
 /* properties */
 #quickbar-wrapper .quickbar {
-  border-bottom: 4px solid #97bae1;
-  background: #e6eff8;
-  background: #d6e4f3;
+  border-bottom: 4px solid #4658b6;
+  background: #f4d25a;
+  background: #f4d25a;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
   -webkit-transition: all 160ms ease-in;
   -moz-transition: all 160ms ease-in;
@@ -73,11 +73,11 @@
     transition: all 240ms ease-in; }
 
 #quickbar-wrapper .quickbar ul {
-  color: #cd6447; }
+  color: white; }
   #quickbar-wrapper .quickbar ul li {
     text-shadow: none;
-    border-top: 1px solid white;
-    border-bottom: 1px solid #f9e612;
+    border-top: 1px solid rgba(255, 255, 255, 0.6);
+    border-bottom: 1px solid #ae1a19;
     font-size: 12px;
     border-radius: 4px;
     opacity: 0.99;
@@ -102,6 +102,12 @@
 
 #quickbar-wrapper {
   text-transform: lowercase; }
+  #quickbar-wrapper .quickbar {
+    background-image: -webkit-linear-gradient(90deg, #f4d25a 64%, rgba(231, 87, 93, 0.4) 100%);
+    background-image: -moz-linear-gradient(90deg, #f4d25a 64%, rgba(231, 87, 93, 0.4) 100%);
+    background-image: -ms-linear-gradient(90deg, #f4d25a 64%, rgba(231, 87, 93, 0.4) 100%);
+    background-image: -o-linear-gradient(90deg, #f4d25a 64%, rgba(231, 87, 93, 0.4) 100%);
+    background-image: linear-gradient(90deg, #f4d25a 64%, rgba(231, 87, 93, 0.4) 100%); }
 
 /* add a gradient and a rollover effect */
 #quickbar-wrapper .quickbar ul li {
@@ -109,10 +115,22 @@
   -moz-transition: all 240ms ease-out;
   -o-transition: all 240ms ease-out;
   transition: all 240ms ease-out;
-  background: #FEFBD9;
-  /*@include gradient( background-image, linear-gradient(180deg, $buttonGradientFrom, $buttonGradientTo ) );*/ }
+  background: #e6569c;
+  background-image: -webkit-linear-gradient(180deg, #e6569c 50%, rgba(218, 33, 32, 0.5) 100%);
+  background-image: -moz-linear-gradient(180deg, #e6569c 50%, rgba(218, 33, 32, 0.5) 100%);
+  background-image: -ms-linear-gradient(180deg, #e6569c 50%, rgba(218, 33, 32, 0.5) 100%);
+  background-image: -o-linear-gradient(180deg, #e6569c 50%, rgba(218, 33, 32, 0.5) 100%);
+  background-image: linear-gradient(180deg, #e6569c 50%, rgba(218, 33, 32, 0.5) 100%);
+  opacity: 0.86; }
   #quickbar-wrapper .quickbar ul li:hover {
-    color: #cd6447;
-    opacity: 0.86; }
+    /*color:$saturatedBlue;*/
+    background: #da2120;
+    opacity: 1;
+    background-image: -webkit-linear-gradient(180deg, #e6569c 50%, #da2120 100%);
+    background-image: -moz-linear-gradient(180deg, #e6569c 50%, #da2120 100%);
+    background-image: -ms-linear-gradient(180deg, #e6569c 50%, #da2120 100%);
+    background-image: -o-linear-gradient(180deg, #e6569c 50%, #da2120 100%);
+    background-image: linear-gradient(180deg, #e6569c 50%, #da2120 100%);
+    /*background:rgba(white,0.86);*/ }
 
 /* end style */
